# github-activity-to-slack

./: .gitignore  .gitpod.yml  Cargo.toml  README.md
src/: config.rs  main.rs  webhook.rs
src/queries/: add_item_week.graphql  item.graphql  project.graphql  project_node_week.graphql  single_select_field_name.graphql  update_item_week.graphql
src/webhook/: github_projects_activity.rs  mod.rs
