[package]
name = "glucord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies]
regex = "1.7.1"
# color-eyre = "0.6.2"
# tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
# tracing-error = "0.2.0"
# tracing = "0.1.37"
serde = "1.0.152"
once_cell = "1.17.0"
graphql_client = { version = "0.12.0", features = ["reqwest-rustls"] }
html-escape = "0.2.13"
toml = "0.7.3"
# anyhow = "1.0.69"

[dependencies.reqwest]
default-features = false
features = ["rustls-tls", "json"]
version = "0.11.14"

